2004-09-01  Matthias Wimmer  <m@tthias.net>

    * util/pool.c: Remove pmalloc_x, we don't use it
    * util/util.c: same

2004-07-15  Matthias Wimmer  <m@tthias.net>

    * README.maintainer: Reminder not to generate broken distributions
    * clients.c: Cache stringprep results
    * conn.c: same
    * connect.c: same
    * jadc2s.c: same
    * jadc2s.h: same
    * util/jid.c: same
    * util/util.h: same
    * configure.in: Use pkg-config to check for openssl
    * ac-helpers/Makefile.am: same

2004-04-13  Matthias Wimmer  <m@tthias.net>

    * clients.c: Make the flash hack optional, general cleanup
    * configure.in: same
    * conn.c: same
    * connect.c: same
    * jadc2s.h: same

2004-04-04  Matthias Wimmer  <m@tthias.net>

    * clients.c: Optional autodetection if SSL/TLS is used on port 5223
    * conn.c: same
    * jadc2s.c: same
    * jadc2s.h: same
    * jadc2s.xml.dist: same
    * connect.c: Removed debugging messages

2004-03-30  Matthias Wimmer  <m@tthias.net>

    * util/jid.c: Minimize the number of necessary stringprep calls
    * conn.c: Removing debugging information used to find a now fixed bug
    * connect.c: same
    * jadc2s.c: same
    * jadc2s.h: same

2004-03-29  Matthias Wimmer  <m@tthias.net>

    * configure.in: Check for Libidn
    * util/jid.c: Nameprep/nodeprep/resourceprep JIDs
    * clients.c: fixed debugging message formating
    * conn.c: Don't send a stream error on close to the router
    * jadc2s.c: same
    * clients.c: update possible JID length to xmpp-core
    * connect.c: same
    * util/util.h: let jit_set() and nad_append_cdata() take const strings
    * util/nad.c: same
    * clients.c: do not printf() debugging information, we closed stdin

2004-03-26  Matthias Wimmer  <m@tthias.net>

    * conn.c: Send close notify for SSL connections

2004-03-17  Matthias Wimmer  <m@tthias.net>

    * jadc2s.xml.dist: Configuration option if IP addresses should be logged
    * jadc2s.c: same
    * jadc2s.h: same